# aavs_uv

./: .gitignore  CODEOWNERS  Makefile  README.md  aavs_uv.py  environment.yml  pyproject.toml  test_aavs_uv.py  test_file_creation.py
.devcontainer/: Dockerfile  devcontainer.json
config/: aavs2_uv_config.yaml
config/.ipynb_checkpoints/: aavs2_uv_config-checkpoint.yaml
config/aavs2/: uv_config.yaml
config/aavs3/: aavs3_mccs.yaml  antenna_locations.txt  uv_config.yaml
docs/: conf.py  conversion.md  generate_aa_images.ipynb  generate_aa_images.py  index.rst  io.rst  postx.md  postx_modules.rst  postx_tour.ipynb  utils.rst  uvx.md
docs/_static/: extra.css
docs/diagrams/: postx_modules.d2  test.d2  uv_flow.drawio
docs/src/: conf.py  index.rst
docs/src/api/: index.rst
example-config/aavs2/: antenna_locations.txt  uv_config.yaml
example-config/aavs3/: uv_config.yaml
notebooks/: postx_tour.ipynb
scripts/: run_ruff_format.sh
scripts/holo-suncal/: holo_suncal.py
scripts/uv-config-from-mccs-yaml/: README.md  update_mccs_configuration_yaml.sh  update_uv_config_from_mccs.py
src/: __init__.py  sdp_uv.py
src/aa_uv/: __init__.py  converter.py  parallelize.py  utils.py  uvw_utils.py  vis_utils.py
src/aa_uv/acacia/: __init__.py  acacia.py
src/aa_uv/config/: README.md  pyuvdata_config.yaml
src/aa_uv/config/aavs2/: uv_config.yaml
src/aa_uv/config/aavs3/: mccs_aavs3_0.1.0.yaml  uv_config.yaml
src/aa_uv/config/eda2/: uv_config.yaml
src/aa_uv/config/s10-3/: antenna_locations.txt  uv_config.yaml
src/aa_uv/config/s8-1/: antenna_locations.txt  uv_config.yaml
src/aa_uv/config/s8-6/: antenna_positions.txt  uv_config.yaml
src/aa_uv/config/s9-2/: antenna_locations.txt  antenna_positions.txt  uv_config.yaml
src/aa_uv/datamodel/: __init__.py  cal.py  cal.yaml  uvx.py  uvx.yaml
src/aa_uv/io/: __init__.py  cal.py  from_pyuvdata.py  mccs_yaml.py  to_pyuvdata.py  to_sdp.py  to_uvx.py  uvx.py
src/aa_uv/postx/: __init__.py  aa_module.py  aa_plotting.py  aa_viewer.py  aperture_array.py  sky_model.py
src/aa_uv/postx/calibration/: aa_calibration.py  holography.py  simple_cal.py  stefcal.py
src/aa_uv/postx/coords/: aa_coords.py  coord_utils.py
src/aa_uv/postx/imaging/: aa_imaging.py  peel.py
src/aa_uv/postx/simulation/: aa_model.py  aa_simulation.py  gsm_sim.py  simple_sim.py
src/aavs_uv/: __init__.py  aavs_uv.py  converter.py  parallelize.py  sdp_uv.py  utils.py  uvw.py  vis_utils.py
src/aavs_uv/acacia/: __init__.py  acacia.py
src/aavs_uv/calibration/: simple_cal.py  simple_sim.py  stefcal.py
src/aavs_uv/config/: README.md  pyuvdata_config.yaml
src/aavs_uv/config/.ipynb_checkpoints/: README-checkpoint.md  aavs2_baseline_order-checkpoint.txt
src/aavs_uv/config/AA1-coordinates/: convert_to_config.py
src/aavs_uv/config/aavs2/: uv_config.yaml
src/aavs_uv/config/aavs3/: aavs3_mccs.yaml  antenna_locations.txt  uv_config.yaml
src/aavs_uv/config/eda2/: antenna_locations.txt  antennas.txt  uv_config.yaml
src/aavs_uv/datamodel/: __init__.py  cal.py  cal.yaml  uvx.py  uvx.yaml  visibility.py  visibility.yaml
src/aavs_uv/io/: __init__.py  aavs_hdf5.py  aavs_hdf5_sdp.py  aavs_hdf5_uvdata.py  aavs_uv5.py  aavs_uvx.py  from_pyuvdata.py  mccs_yaml.py  pyuvdata.py  to_pyuvdata.py  to_sdp.py  to_uvx.py  uvx.py  yaml.py
src/aavs_uv/postx/: __init__.py  aa_plotting.py  allsky_viewer.py  ant_array.py  aperture_array.py  coord_utils.py  sky_model.py
src/aavs_uv/postx/calibration/: __init__.py  aa_model.py  aa_sim.py  gsm_sim.py  holography.py  model.py  simple_cal.py  simple_sim.py
src/ska_ost_low_uv/: __init__.py  converter.py  parallelize.py  utils.py  uvw_utils.py  vis_utils.py
src/ska_ost_low_uv/acacia/: __init__.py  acacia.py
src/ska_ost_low_uv/config/: README.md
src/ska_ost_low_uv/config/aavs2/: antenna_locations.txt  uv_config.yaml
src/ska_ost_low_uv/config/aavs3/: antenna_locations.txt  uv_config.yaml
src/ska_ost_low_uv/datamodel/: __init__.py  cal.py  cal.yaml  uvx.py  uvx.yaml
src/ska_ost_low_uv/io/: __init__.py  cal.py  from_pyuvdata.py  mccs_yaml.py  to_pyuvdata.py  to_sdp.py  to_uvx.py  uvx.py
src/ska_ost_low_uv/postx/: __init__.py  aa_module.py  aa_plotting.py  aa_viewer.py  aperture_array.py  sky_model.py
test-data/: chan_204_20230823T055556.uvfits  correlation_burst_204_20230823_21356_0.hdf5
test-data/aavs2_1x1000ms/: README.md
test-data/aavs2_1x1000ms/chan_204_20230823T055556.uv/: flags  history
test-data/aavs2_2x500ms/: README.md
test-data/chan_204_20230823T055556.uv/: header  vartable
tests/: __init__.py  example-data.ipynb  run_profile.py  run_tests.sh  test_aavs3.py  test_aavs_uv.py  test_antenna_cal.py  test_cal.py  test_calibration.py  test_conj.py  test_converter.py  test_datamodel_visibility.py  test_file_creation.py  test_mccs_yaml.py  test_parallel.py  test_postx.py  test_postx_coord_utils.py  test_pyuvdata_to_uvx.py  test_resource_loading.py  test_sdp_uv.py  test_sdp_uvw_phasing.py  test_station_rotation.py  test_utils.py  test_uv5.py  test_uvw.py  test_uvx_pyuvdata_compare.py  test_vis_utils.py  test_yaml.py  test_zparallel.py
tests/acacia/: test_acacia.py  test_acacia_plots.ipynb
tests/postx/: test_aa_plotting.py  test_aa_simulation.py  test_aa_viewer.py  test_holography.py  test_holography_plotting.ipynb  test_postx.py  test_postx_aa_plotting.ipynb  test_postx_aa_plotting.py  test_postx_calibration.py  test_postx_coord_utils.py  test_stefcal.py
tests/test-data/: context.yml
tests/test-data/aavs2/: correlation_burst_100_20211113_14447_0.hdf5  correlation_burst_204_20211113_14653_0.hdf5
tests/test-data/aavs2_2x500ms/: correlation_burst_204_20230927_35116_0.hdf5
tests/test-data/aavs3/: aavs3_chan204_20231115.uvfits  correlation_burst_100_20240107_19437_0.hdf5  correlation_burst_204_20240107_19437_0.hdf5
tests/test-data/eda2/: correlation_burst_100_20211211_14167_0.hdf5  correlation_burst_204_20211211_14373_0.hdf5
tests/test-data/s8-6/: correlation_burst_204_20240701_65074_0.hdf5
tests/unit/: __init__.py  test_ska_ost_low_uv.py
tests/z_parallel/: test_parallel.py
(+59 files in other folders)
